--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,44 +11,18 @@
       <div class="col-xs-12">
         <ul class="list-group">
           <div class="col-md-6">
-            <h2>Post</h2>
-            <li class="list-group-item">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Dignissimos voluptatum a pariatur expedita culpa quaerat
-              distinctio?<br />
-              <div class="mt-3">
-                <button class="btn btn-success mr-3">J'aime</button>
-                <button class="btn btn-danger">J'aime Pas</button>
-              </div>
-            </li>
-          </div>
-          <div class="col-md-6">
-            <li class="list-group-item">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Dignissimos voluptatum a pariatur expedita culpa quaerat
-              distinctio?<br />
-              <div class="mt-3">
-                <button class="btn btn-success mr-3">J'aime</button>
-                <button class="btn btn-danger">J'aime Pas</button>
-              </div>
-            </li>
-          </div>
-          <div class="col-md-6">
-            <li class="list-group-item">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Dignissimos voluptatum a pariatur expedita culpa quaerat
-              distinctio?<br />
-              <div class="mt-3">
-                <button class="btn btn-success mr-3">J'aime</button>
-                <button class="btn btn-danger">J'aime Pas</button>
-              </div>
-            </li>
+            <app-post-list-component  *ngFor="let post of posts"
+                                      [postTitle]="post.title"
+                                      [postContent]="post.content"
+                                      [postLike]="post.LoveIts"
+                                      [postCreateDate]= 'post.postCreateDate' > 
+            </app-post-list-component>
           </div>
         </ul>
       </div>
     </div>
   </div>
-
+ 
   <router-outlet></router-outlet>
   <!-- ng generate component mon-premier  -->
 </div>
