--- a/src/app/post-list-component/post-list-component.component.html
+++ b/src/app/post-list-component/post-list-component.component.html
@@ -1,1 +1,10 @@
-<p>post-list-component works!</p>
+<h2>Posts</h2>
+<li class="list-group-item">
+    <h3>Post : {{ postTitle }}</h3>
+    <p>Date : {{ postCreateDate }}</p>
+  {{ postContent }}<br />
+  <div class="mt-3">
+    <app-post-list-item-component>
+    </app-post-list-item-component>
+  </div>
+</li>
