--- a/src/app/post-list-component/post-list-item-component/post-list-item-component.component.html
+++ b/src/app/post-list-component/post-list-item-component/post-list-item-component.component.html
@@ -1,1 +1,2 @@
-<p>post-list-item-component works!</p>
+<button class="btn btn-success mr-3">J'aime</button>
+<button class="btn btn-danger">J'aime Pas</button>
